<resources>
    <string name="app_name">Sneak-Out</string>
    <string name="logotext">logotext</string>
    <string name="logo">logo</string>
    <string name="dashboard">Dashboard</string>
    <string name="logoimage">logoimage</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="go">Go</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="admin">ADMIN</string>
    <string name="organiser">ORGANIZER</string>
    <string name="user">USER</string>
    <string name="weclome">Weclome,</string>
    <string name="sign_up_to_start_your_new_journey">Sign Up to start your new Journey</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_no">Phone-No.</string>
    <string name="already_have_an_account_login_here">Already have an account?\n Click here to Login</string>
    <string name="title_activity_profile">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="_12">12</string>
    <string name="swapnil">Swapnil Mane</string>
    <string name="af1">AF1</string>
    <string name="_12345">12345</string>
    <string name="stm2212">stm2212</string>
    <string name="booking">Booking</string>
    <string name="balance">Balance</string>
    <string name="_123">₹123</string>
    <string name="calendar">calendar</string>
    <string name="wallet">wallet</string>
    <string name="profile_pic">profile_pic</string>
    <string name="Access">Access</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">LOGOUT</string>
    <string name="close_button">X</string>
    <string name="code">CO\nDE</string>
    <string name="verification">VERIFICATION</string>
    <string name="enter_one_time_password_sent_to_your_registered_e_mail_id">Enter One Time Password sent to your registered phone number</string>
    <string name="verify_code">Verify Code</string>
    <string name="provide_your_account">Provide your account\'s phone number for which you want to reset your password!</string>
    <string name="lock">lock</string>
    <string name="enter_e_mail_id">Enter E-mail ID</string>
    <string name="new_credentials">New Credentials</string>
    <string name="id_verified">Your identity has been verified!\nSet your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="password_updated_successfully">Your password has been updated successfully!</string>
    <string name="password_updated">Password updated</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">Remember me</string>
</resources>