<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDEFEF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#99D6D9"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profilelogo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/dummy_profile"
                android:layout_centerVertical="true"
                android:transitionName="splashlogoimage"
                android:contentDescription="@string/profile_pic" />

            <TextView
                android:id="@+id/full_nam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profilelogo"
                android:transitionName="splashtextimage"
                android:includeFontPadding="false"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/berkshire_swash"
                android:text="@string/full_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/usernam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/profilelogo"
                android:layout_below="@+id/full_nam"
                android:includeFontPadding="false"
                android:layout_marginStart="10dp"
                android:transitionName="signinup"
                android:text="@string/username"
                android:textColor="@color/grey"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:layout_marginTop="-100dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="10dp"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/wallet"
                        android:contentDescription="@string/wallet" />

                    <TextView
                        android:id="@+id/pay_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_123"
                        android:textColor="@color/black"
                        android:includeFontPadding="false"
                        android:textSize="20sp"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:id="@+id/pay_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:includeFontPadding="false"
                        android:layout_below="@+id/pay_label"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="10dp"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/booking_icon_png_1"
                        android:contentDescription="@string/calendar" />

                    <TextView
                        android:id="@+id/book_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12"
                        android:textColor="@color/black"
                        android:includeFontPadding="false"
                        android:textSize="20sp"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:id="@+id/book_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/booking"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:includeFontPadding="false"
                        android:layout_below="@+id/book_label"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:hintTextColor="@color/colorAccent"
                android:textColorHint="@color/black"
                app:startIconDrawable="@drawable/small_dummy_profile"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="#D1F3F3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconTint="@color/black"
                android:transitionName="userna"
                android:layout_marginBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/swapnil"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                app:hintTextColor="@color/colorAccent"
                android:textColorHint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="#D1F3F3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/black"
                android:transitionName="passw"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stm2212"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phonNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no"
                app:hintTextColor="@color/colorAccent"
                android:textColorHint="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                app:boxBackgroundColor="#D1F3F3"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/phone"
                app:startIconTint="@color/black"
                android:transitionName="forgtpass"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_12345"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updprof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_profile"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:transitionName="buttgo"
                android:backgroundTint="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/logoutbutt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goBacktoLogin"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightgrey"
                android:transitionName="buttsignup"
                android:layout_marginTop="25dp"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>