<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".ForgetPasswordSucess">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/updtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:transitionName="splashlogoimage"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/allerta_stencil"
            android:textAlignment="center"
            android:gravity="center"
            android:textAllCaps="true"/>

        <ImageView
            android:id="@+id/checkimg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/checked"
            android:transitionName="signinup"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/updsuccesstxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated_successfully"
            android:transitionName="passw"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:textAlignment="center"
            android:gravity="center"/>

        <Button
            android:id="@+id/loginbutt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="callLogin"
            android:backgroundTint="@color/colorPrimaryDark"
            android:transitionName="buttgo"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>